crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__limit__too_many_locals.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/limit/too_many_locals.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f @1 []
      (block
         (var v01 @0 ∅)
         (var v02 @1 ∅)
         (var v03 @2 ∅)
         (var v04 @3 ∅)
         (var v05 @4 ∅)
         (var v06 @5 ∅)
         (var v07 @6 ∅)
         (var v08 @7 ∅)
         (var v09 @8 ∅)
         (var v0a @9 ∅)
         (var v0b @10 ∅)
         (var v0c @11 ∅)
         (var v0d @12 ∅)
         (var v0e @13 ∅)
         (var v0f @14 ∅)
         (var v10 @15 ∅)
         (var v11 @16 ∅)
         (var v12 @17 ∅)
         (var v13 @18 ∅)
         (var v14 @19 ∅)
         (var v15 @20 ∅)
         (var v16 @21 ∅)
         (var v17 @22 ∅)
         (var v18 @23 ∅)
         (var v19 @24 ∅)
         (var v1a @25 ∅)
         (var v1b @26 ∅)
         (var v1c @27 ∅)
         (var v1d @28 ∅)
         (var v1e @29 ∅)
         (var v1f @30 ∅)
         (var v20 @31 ∅)
         (var v21 @32 ∅)
         (var v22 @33 ∅)
         (var v23 @34 ∅)
         (var v24 @35 ∅)
         (var v25 @36 ∅)
         (var v26 @37 ∅)
         (var v27 @38 ∅)
         (var v28 @39 ∅)
         (var v29 @40 ∅)
         (var v2a @41 ∅)
         (var v2b @42 ∅)
         (var v2c @43 ∅)
         (var v2d @44 ∅)
         (var v2e @45 ∅)
         (var v2f @46 ∅)
         (var v30 @47 ∅)
         (var v31 @48 ∅)
         (var v32 @49 ∅)
         (var v33 @50 ∅)
         (var v34 @51 ∅)
         (var v35 @52 ∅)
         (var v36 @53 ∅)
         (var v37 @54 ∅)
         (var v38 @55 ∅)
         (var v39 @56 ∅)
         (var v3a @57 ∅)
         (var v3b @58 ∅)
         (var v3c @59 ∅)
         (var v3d @60 ∅)
         (var v3e @61 ∅)
         (var v3f @62 ∅)
         (var v40 @63 ∅)
         (var v41 @64 ∅)
         (var v42 @65 ∅)
         (var v43 @66 ∅)
         (var v44 @67 ∅)
         (var v45 @68 ∅)
         (var v46 @69 ∅)
         (var v47 @70 ∅)
         (var v48 @71 ∅)
         (var v49 @72 ∅)
         (var v4a @73 ∅)
         (var v4b @74 ∅)
         (var v4c @75 ∅)
         (var v4d @76 ∅)
         (var v4e @77 ∅)
         (var v4f @78 ∅)
         (var v50 @79 ∅)
         (var v51 @80 ∅)
         (var v52 @81 ∅)
         (var v53 @82 ∅)
         (var v54 @83 ∅)
         (var v55 @84 ∅)
         (var v56 @85 ∅)
         (var v57 @86 ∅)
         (var v58 @87 ∅)
         (var v59 @88 ∅)
         (var v5a @89 ∅)
         (var v5b @90 ∅)
         (var v5c @91 ∅)
         (var v5d @92 ∅)
         (var v5e @93 ∅)
         (var v5f @94 ∅)
         (var v60 @95 ∅)
         (var v61 @96 ∅)
         (var v62 @97 ∅)
         (var v63 @98 ∅)
         (var v64 @99 ∅)
         (var v65 @100 ∅)
         (var v66 @101 ∅)
         (var v67 @102 ∅)
         (var v68 @103 ∅)
         (var v69 @104 ∅)
         (var v6a @105 ∅)
         (var v6b @106 ∅)
         (var v6c @107 ∅)
         (var v6d @108 ∅)
         (var v6e @109 ∅)
         (var v6f @110 ∅)
         (var v70 @111 ∅)
         (var v71 @112 ∅)
         (var v72 @113 ∅)
         (var v73 @114 ∅)
         (var v74 @115 ∅)
         (var v75 @116 ∅)
         (var v76 @117 ∅)
         (var v77 @118 ∅)
         (var v78 @119 ∅)
         (var v79 @120 ∅)
         (var v7a @121 ∅)
         (var v7b @122 ∅)
         (var v7c @123 ∅)
         (var v7d @124 ∅)
         (var v7e @125 ∅)
         (var v7f @126 ∅)
         (var v80 @127 ∅)
         (var v81 @128 ∅)
         (var v82 @129 ∅)
         (var v83 @130 ∅)
         (var v84 @131 ∅)
         (var v85 @132 ∅)
         (var v86 @133 ∅)
         (var v87 @134 ∅)
         (var v88 @135 ∅)
         (var v89 @136 ∅)
         (var v8a @137 ∅)
         (var v8b @138 ∅)
         (var v8c @139 ∅)
         (var v8d @140 ∅)
         (var v8e @141 ∅)
         (var v8f @142 ∅)
         (var v90 @143 ∅)
         (var v91 @144 ∅)
         (var v92 @145 ∅)
         (var v93 @146 ∅)
         (var v94 @147 ∅)
         (var v95 @148 ∅)
         (var v96 @149 ∅)
         (var v97 @150 ∅)
         (var v98 @151 ∅)
         (var v99 @152 ∅)
         (var v9a @153 ∅)
         (var v9b @154 ∅)
         (var v9c @155 ∅)
         (var v9d @156 ∅)
         (var v9e @157 ∅)
         (var v9f @158 ∅)
         (var va0 @159 ∅)
         (var va1 @160 ∅)
         (var va2 @161 ∅)
         (var va3 @162 ∅)
         (var va4 @163 ∅)
         (var va5 @164 ∅)
         (var va6 @165 ∅)
         (var va7 @166 ∅)
         (var va8 @167 ∅)
         (var va9 @168 ∅)
         (var vaa @169 ∅)
         (var vab @170 ∅)
         (var vac @171 ∅)
         (var vad @172 ∅)
         (var vae @173 ∅)
         (var vaf @174 ∅)
         (var vb0 @175 ∅)
         (var vb1 @176 ∅)
         (var vb2 @177 ∅)
         (var vb3 @178 ∅)
         (var vb4 @179 ∅)
         (var vb5 @180 ∅)
         (var vb6 @181 ∅)
         (var vb7 @182 ∅)
         (var vb8 @183 ∅)
         (var vb9 @184 ∅)
         (var vba @185 ∅)
         (var vbb @186 ∅)
         (var vbc @187 ∅)
         (var vbd @188 ∅)
         (var vbe @189 ∅)
         (var vbf @190 ∅)
         (var vc0 @191 ∅)
         (var vc1 @192 ∅)
         (var vc2 @193 ∅)
         (var vc3 @194 ∅)
         (var vc4 @195 ∅)
         (var vc5 @196 ∅)
         (var vc6 @197 ∅)
         (var vc7 @198 ∅)
         (var vc8 @199 ∅)
         (var vc9 @200 ∅)
         (var vca @201 ∅)
         (var vcb @202 ∅)
         (var vcc @203 ∅)
         (var vcd @204 ∅)
         (var vce @205 ∅)
         (var vcf @206 ∅)
         (var vd0 @207 ∅)
         (var vd1 @208 ∅)
         (var vd2 @209 ∅)
         (var vd3 @210 ∅)
         (var vd4 @211 ∅)
         (var vd5 @212 ∅)
         (var vd6 @213 ∅)
         (var vd7 @214 ∅)
         (var vd8 @215 ∅)
         (var vd9 @216 ∅)
         (var vda @217 ∅)
         (var vdb @218 ∅)
         (var vdc @219 ∅)
         (var vdd @220 ∅)
         (var vde @221 ∅)
         (var vdf @222 ∅)
         (var ve0 @223 ∅)
         (var ve1 @224 ∅)
         (var ve2 @225 ∅)
         (var ve3 @226 ∅)
         (var ve4 @227 ∅)
         (var ve5 @228 ∅)
         (var ve6 @229 ∅)
         (var ve7 @230 ∅)
         (var ve8 @231 ∅)
         (var ve9 @232 ∅)
         (var vea @233 ∅)
         (var veb @234 ∅)
         (var vec @235 ∅)
         (var ved @236 ∅)
         (var vee @237 ∅)
         (var vef @238 ∅)
         (var vf0 @239 ∅)
         (var vf1 @240 ∅)
         (var vf2 @241 ∅)
         (var vf3 @242 ∅)
         (var vf4 @243 ∅)
         (var vf5 @244 ∅)
         (var vf6 @245 ∅)
         (var vf7 @246 ∅)
         (var vf8 @247 ∅)
         (var vf9 @248 ∅)
         (var vfa @249 ∅)
         (var vfb @250 ∅)
         (var vfc @251 ∅)
         (var vfd @252 ∅)
         (var vfe @253 ∅)
         (var vff @254 ∅)
         (var oops @255 ∅))))

----- stderr -----
