crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__scope-craftinginterpreters__test__limit__too_many_upvalues.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/limit/too_many_upvalues.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f @1 []
      (block
         (var v00 @0 ∅)
         (var v01 @0 ∅)
         (var v02 @0 ∅)
         (var v03 @0 ∅)
         (var v04 @0 ∅)
         (var v05 @0 ∅)
         (var v06 @0 ∅)
         (var v07 @0 ∅)
         (var v08 @0 ∅)
         (var v09 @0 ∅)
         (var v0a @0 ∅)
         (var v0b @0 ∅)
         (var v0c @0 ∅)
         (var v0d @0 ∅)
         (var v0e @0 ∅)
         (var v0f @0 ∅)
         (var v10 @0 ∅)
         (var v11 @0 ∅)
         (var v12 @0 ∅)
         (var v13 @0 ∅)
         (var v14 @0 ∅)
         (var v15 @0 ∅)
         (var v16 @0 ∅)
         (var v17 @0 ∅)
         (var v18 @0 ∅)
         (var v19 @0 ∅)
         (var v1a @0 ∅)
         (var v1b @0 ∅)
         (var v1c @0 ∅)
         (var v1d @0 ∅)
         (var v1e @0 ∅)
         (var v1f @0 ∅)
         (var v20 @0 ∅)
         (var v21 @0 ∅)
         (var v22 @0 ∅)
         (var v23 @0 ∅)
         (var v24 @0 ∅)
         (var v25 @0 ∅)
         (var v26 @0 ∅)
         (var v27 @0 ∅)
         (var v28 @0 ∅)
         (var v29 @0 ∅)
         (var v2a @0 ∅)
         (var v2b @0 ∅)
         (var v2c @0 ∅)
         (var v2d @0 ∅)
         (var v2e @0 ∅)
         (var v2f @0 ∅)
         (var v30 @0 ∅)
         (var v31 @0 ∅)
         (var v32 @0 ∅)
         (var v33 @0 ∅)
         (var v34 @0 ∅)
         (var v35 @0 ∅)
         (var v36 @0 ∅)
         (var v37 @0 ∅)
         (var v38 @0 ∅)
         (var v39 @0 ∅)
         (var v3a @0 ∅)
         (var v3b @0 ∅)
         (var v3c @0 ∅)
         (var v3d @0 ∅)
         (var v3e @0 ∅)
         (var v3f @0 ∅)
         (var v40 @0 ∅)
         (var v41 @0 ∅)
         (var v42 @0 ∅)
         (var v43 @0 ∅)
         (var v44 @0 ∅)
         (var v45 @0 ∅)
         (var v46 @0 ∅)
         (var v47 @0 ∅)
         (var v48 @0 ∅)
         (var v49 @0 ∅)
         (var v4a @0 ∅)
         (var v4b @0 ∅)
         (var v4c @0 ∅)
         (var v4d @0 ∅)
         (var v4e @0 ∅)
         (var v4f @0 ∅)
         (var v50 @0 ∅)
         (var v51 @0 ∅)
         (var v52 @0 ∅)
         (var v53 @0 ∅)
         (var v54 @0 ∅)
         (var v55 @0 ∅)
         (var v56 @0 ∅)
         (var v57 @0 ∅)
         (var v58 @0 ∅)
         (var v59 @0 ∅)
         (var v5a @0 ∅)
         (var v5b @0 ∅)
         (var v5c @0 ∅)
         (var v5d @0 ∅)
         (var v5e @0 ∅)
         (var v5f @0 ∅)
         (var v60 @0 ∅)
         (var v61 @0 ∅)
         (var v62 @0 ∅)
         (var v63 @0 ∅)
         (var v64 @0 ∅)
         (var v65 @0 ∅)
         (var v66 @0 ∅)
         (var v67 @0 ∅)
         (var v68 @0 ∅)
         (var v69 @0 ∅)
         (var v6a @0 ∅)
         (var v6b @0 ∅)
         (var v6c @0 ∅)
         (var v6d @0 ∅)
         (var v6e @0 ∅)
         (var v6f @0 ∅)
         (var v70 @0 ∅)
         (var v71 @0 ∅)
         (var v72 @0 ∅)
         (var v73 @0 ∅)
         (var v74 @0 ∅)
         (var v75 @0 ∅)
         (var v76 @0 ∅)
         (var v77 @0 ∅)
         (var v78 @0 ∅)
         (var v79 @0 ∅)
         (var v7a @0 ∅)
         (var v7b @0 ∅)
         (var v7c @0 ∅)
         (var v7d @0 ∅)
         (var v7e @0 ∅)
         (var v7f @0 ∅)
         (fun g @0 []
            (block
               (var v80 @0 ∅)
               (var v81 @0 ∅)
               (var v82 @0 ∅)
               (var v83 @0 ∅)
               (var v84 @0 ∅)
               (var v85 @0 ∅)
               (var v86 @0 ∅)
               (var v87 @0 ∅)
               (var v88 @0 ∅)
               (var v89 @0 ∅)
               (var v8a @0 ∅)
               (var v8b @0 ∅)
               (var v8c @0 ∅)
               (var v8d @0 ∅)
               (var v8e @0 ∅)
               (var v8f @0 ∅)
               (var v90 @0 ∅)
               (var v91 @0 ∅)
               (var v92 @0 ∅)
               (var v93 @0 ∅)
               (var v94 @0 ∅)
               (var v95 @0 ∅)
               (var v96 @0 ∅)
               (var v97 @0 ∅)
               (var v98 @0 ∅)
               (var v99 @0 ∅)
               (var v9a @0 ∅)
               (var v9b @0 ∅)
               (var v9c @0 ∅)
               (var v9d @0 ∅)
               (var v9e @0 ∅)
               (var v9f @0 ∅)
               (var va0 @0 ∅)
               (var va1 @0 ∅)
               (var va2 @0 ∅)
               (var va3 @0 ∅)
               (var va4 @0 ∅)
               (var va5 @0 ∅)
               (var va6 @0 ∅)
               (var va7 @0 ∅)
               (var va8 @0 ∅)
               (var va9 @0 ∅)
               (var vaa @0 ∅)
               (var vab @0 ∅)
               (var vac @0 ∅)
               (var vad @0 ∅)
               (var vae @0 ∅)
               (var vaf @0 ∅)
               (var vb0 @0 ∅)
               (var vb1 @0 ∅)
               (var vb2 @0 ∅)
               (var vb3 @0 ∅)
               (var vb4 @0 ∅)
               (var vb5 @0 ∅)
               (var vb6 @0 ∅)
               (var vb7 @0 ∅)
               (var vb8 @0 ∅)
               (var vb9 @0 ∅)
               (var vba @0 ∅)
               (var vbb @0 ∅)
               (var vbc @0 ∅)
               (var vbd @0 ∅)
               (var vbe @0 ∅)
               (var vbf @0 ∅)
               (var vc0 @0 ∅)
               (var vc1 @0 ∅)
               (var vc2 @0 ∅)
               (var vc3 @0 ∅)
               (var vc4 @0 ∅)
               (var vc5 @0 ∅)
               (var vc6 @0 ∅)
               (var vc7 @0 ∅)
               (var vc8 @0 ∅)
               (var vc9 @0 ∅)
               (var vca @0 ∅)
               (var vcb @0 ∅)
               (var vcc @0 ∅)
               (var vcd @0 ∅)
               (var vce @0 ∅)
               (var vcf @0 ∅)
               (var vd0 @0 ∅)
               (var vd1 @0 ∅)
               (var vd2 @0 ∅)
               (var vd3 @0 ∅)
               (var vd4 @0 ∅)
               (var vd5 @0 ∅)
               (var vd6 @0 ∅)
               (var vd7 @0 ∅)
               (var vd8 @0 ∅)
               (var vd9 @0 ∅)
               (var vda @0 ∅)
               (var vdb @0 ∅)
               (var vdc @0 ∅)
               (var vdd @0 ∅)
               (var vde @0 ∅)
               (var vdf @0 ∅)
               (var ve0 @0 ∅)
               (var ve1 @0 ∅)
               (var ve2 @0 ∅)
               (var ve3 @0 ∅)
               (var ve4 @0 ∅)
               (var ve5 @0 ∅)
               (var ve6 @0 ∅)
               (var ve7 @0 ∅)
               (var ve8 @0 ∅)
               (var ve9 @0 ∅)
               (var vea @0 ∅)
               (var veb @0 ∅)
               (var vec @0 ∅)
               (var ved @0 ∅)
               (var vee @0 ∅)
               (var vef @0 ∅)
               (var vf0 @0 ∅)
               (var vf1 @0 ∅)
               (var vf2 @0 ∅)
               (var vf3 @0 ∅)
               (var vf4 @0 ∅)
               (var vf5 @0 ∅)
               (var vf6 @0 ∅)
               (var vf7 @0 ∅)
               (var vf8 @0 ∅)
               (var vf9 @0 ∅)
               (var vfa @0 ∅)
               (var vfb @0 ∅)
               (var vfc @0 ∅)
               (var vfd @0 ∅)
               (var vfe @0 ∅)
               (var vff @0 ∅)
               (var oops @0 ∅)
               (fun h @0 []
                  (block
                     (expr (name-error v00))
                     (expr (name-error v01))
                     (expr (name-error v02))
                     (expr (name-error v03))
                     (expr (name-error v04))
                     (expr (name-error v05))
                     (expr (name-error v06))
                     (expr (name-error v07))
                     (expr (name-error v08))
                     (expr (name-error v09))
                     (expr (name-error v0a))
                     (expr (name-error v0b))
                     (expr (name-error v0c))
                     (expr (name-error v0d))
                     (expr (name-error v0e))
                     (expr (name-error v0f))
                     (expr (name-error v10))
                     (expr (name-error v11))
                     (expr (name-error v12))
                     (expr (name-error v13))
                     (expr (name-error v14))
                     (expr (name-error v15))
                     (expr (name-error v16))
                     (expr (name-error v17))
                     (expr (name-error v18))
                     (expr (name-error v19))
                     (expr (name-error v1a))
                     (expr (name-error v1b))
                     (expr (name-error v1c))
                     (expr (name-error v1d))
                     (expr (name-error v1e))
                     (expr (name-error v1f))
                     (expr (name-error v20))
                     (expr (name-error v21))
                     (expr (name-error v22))
                     (expr (name-error v23))
                     (expr (name-error v24))
                     (expr (name-error v25))
                     (expr (name-error v26))
                     (expr (name-error v27))
                     (expr (name-error v28))
                     (expr (name-error v29))
                     (expr (name-error v2a))
                     (expr (name-error v2b))
                     (expr (name-error v2c))
                     (expr (name-error v2d))
                     (expr (name-error v2e))
                     (expr (name-error v2f))
                     (expr (name-error v30))
                     (expr (name-error v31))
                     (expr (name-error v32))
                     (expr (name-error v33))
                     (expr (name-error v34))
                     (expr (name-error v35))
                     (expr (name-error v36))
                     (expr (name-error v37))
                     (expr (name-error v38))
                     (expr (name-error v39))
                     (expr (name-error v3a))
                     (expr (name-error v3b))
                     (expr (name-error v3c))
                     (expr (name-error v3d))
                     (expr (name-error v3e))
                     (expr (name-error v3f))
                     (expr (name-error v40))
                     (expr (name-error v41))
                     (expr (name-error v42))
                     (expr (name-error v43))
                     (expr (name-error v44))
                     (expr (name-error v45))
                     (expr (name-error v46))
                     (expr (name-error v47))
                     (expr (name-error v48))
                     (expr (name-error v49))
                     (expr (name-error v4a))
                     (expr (name-error v4b))
                     (expr (name-error v4c))
                     (expr (name-error v4d))
                     (expr (name-error v4e))
                     (expr (name-error v4f))
                     (expr (name-error v50))
                     (expr (name-error v51))
                     (expr (name-error v52))
                     (expr (name-error v53))
                     (expr (name-error v54))
                     (expr (name-error v55))
                     (expr (name-error v56))
                     (expr (name-error v57))
                     (expr (name-error v58))
                     (expr (name-error v59))
                     (expr (name-error v5a))
                     (expr (name-error v5b))
                     (expr (name-error v5c))
                     (expr (name-error v5d))
                     (expr (name-error v5e))
                     (expr (name-error v5f))
                     (expr (name-error v60))
                     (expr (name-error v61))
                     (expr (name-error v62))
                     (expr (name-error v63))
                     (expr (name-error v64))
                     (expr (name-error v65))
                     (expr (name-error v66))
                     (expr (name-error v67))
                     (expr (name-error v68))
                     (expr (name-error v69))
                     (expr (name-error v6a))
                     (expr (name-error v6b))
                     (expr (name-error v6c))
                     (expr (name-error v6d))
                     (expr (name-error v6e))
                     (expr (name-error v6f))
                     (expr (name-error v70))
                     (expr (name-error v71))
                     (expr (name-error v72))
                     (expr (name-error v73))
                     (expr (name-error v74))
                     (expr (name-error v75))
                     (expr (name-error v76))
                     (expr (name-error v77))
                     (expr (name-error v78))
                     (expr (name-error v79))
                     (expr (name-error v7a))
                     (expr (name-error v7b))
                     (expr (name-error v7c))
                     (expr (name-error v7d))
                     (expr (name-error v7e))
                     (expr (name-error v7f))
                     (expr (name-error v80))
                     (expr (name-error v81))
                     (expr (name-error v82))
                     (expr (name-error v83))
                     (expr (name-error v84))
                     (expr (name-error v85))
                     (expr (name-error v86))
                     (expr (name-error v87))
                     (expr (name-error v88))
                     (expr (name-error v89))
                     (expr (name-error v8a))
                     (expr (name-error v8b))
                     (expr (name-error v8c))
                     (expr (name-error v8d))
                     (expr (name-error v8e))
                     (expr (name-error v8f))
                     (expr (name-error v90))
                     (expr (name-error v91))
                     (expr (name-error v92))
                     (expr (name-error v93))
                     (expr (name-error v94))
                     (expr (name-error v95))
                     (expr (name-error v96))
                     (expr (name-error v97))
                     (expr (name-error v98))
                     (expr (name-error v99))
                     (expr (name-error v9a))
                     (expr (name-error v9b))
                     (expr (name-error v9c))
                     (expr (name-error v9d))
                     (expr (name-error v9e))
                     (expr (name-error v9f))
                     (expr (name-error va0))
                     (expr (name-error va1))
                     (expr (name-error va2))
                     (expr (name-error va3))
                     (expr (name-error va4))
                     (expr (name-error va5))
                     (expr (name-error va6))
                     (expr (name-error va7))
                     (expr (name-error va8))
                     (expr (name-error va9))
                     (expr (name-error vaa))
                     (expr (name-error vab))
                     (expr (name-error vac))
                     (expr (name-error vad))
                     (expr (name-error vae))
                     (expr (name-error vaf))
                     (expr (name-error vb0))
                     (expr (name-error vb1))
                     (expr (name-error vb2))
                     (expr (name-error vb3))
                     (expr (name-error vb4))
                     (expr (name-error vb5))
                     (expr (name-error vb6))
                     (expr (name-error vb7))
                     (expr (name-error vb8))
                     (expr (name-error vb9))
                     (expr (name-error vba))
                     (expr (name-error vbb))
                     (expr (name-error vbc))
                     (expr (name-error vbd))
                     (expr (name-error vbe))
                     (expr (name-error vbf))
                     (expr (name-error vc0))
                     (expr (name-error vc1))
                     (expr (name-error vc2))
                     (expr (name-error vc3))
                     (expr (name-error vc4))
                     (expr (name-error vc5))
                     (expr (name-error vc6))
                     (expr (name-error vc7))
                     (expr (name-error vc8))
                     (expr (name-error vc9))
                     (expr (name-error vca))
                     (expr (name-error vcb))
                     (expr (name-error vcc))
                     (expr (name-error vcd))
                     (expr (name-error vce))
                     (expr (name-error vcf))
                     (expr (name-error vd0))
                     (expr (name-error vd1))
                     (expr (name-error vd2))
                     (expr (name-error vd3))
                     (expr (name-error vd4))
                     (expr (name-error vd5))
                     (expr (name-error vd6))
                     (expr (name-error vd7))
                     (expr (name-error vd8))
                     (expr (name-error vd9))
                     (expr (name-error vda))
                     (expr (name-error vdb))
                     (expr (name-error vdc))
                     (expr (name-error vdd))
                     (expr (name-error vde))
                     (expr (name-error vdf))
                     (expr (name-error ve0))
                     (expr (name-error ve1))
                     (expr (name-error ve2))
                     (expr (name-error ve3))
                     (expr (name-error ve4))
                     (expr (name-error ve5))
                     (expr (name-error ve6))
                     (expr (name-error ve7))
                     (expr (name-error ve8))
                     (expr (name-error ve9))
                     (expr (name-error vea))
                     (expr (name-error veb))
                     (expr (name-error vec))
                     (expr (name-error ved))
                     (expr (name-error vee))
                     (expr (name-error vef))
                     (expr (name-error vf0))
                     (expr (name-error vf1))
                     (expr (name-error vf2))
                     (expr (name-error vf3))
                     (expr (name-error vf4))
                     (expr (name-error vf5))
                     (expr (name-error vf6))
                     (expr (name-error vf7))
                     (expr (name-error vf8))
                     (expr (name-error vf9))
                     (expr (name-error vfa))
                     (expr (name-error vfb))
                     (expr (name-error vfc))
                     (expr (name-error vfd))
                     (expr (name-error vfe))
                     (expr (name-error vff))
                     (expr (name-error oops)))))))))

----- stderr -----
